DIGG-636 Configuration of KeyAndCertificateHandler objects